--- a/to_parsed_csv.ipynb
+++ b/to_parsed_csv.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-21T12:55:09.428594Z",
-     "start_time": "2018-09-21T12:55:08.992073Z"
+     "end_time": "2018-09-22T14:57:02.552343Z",
+     "start_time": "2018-09-22T14:57:02.113549Z"
     }
    },
    "outputs": [],
@@ -19,48 +19,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-21T12:59:31.246256Z",
-     "start_time": "2018-09-21T12:59:31.241816Z"
+     "end_time": "2018-09-22T14:56:53.992513Z",
+     "start_time": "2018-09-22T14:56:53.987432Z"
     }
    },
    "outputs": [],
    "source": [
-    "def to_parsed_csv(zip_path):\n",
-    "    print(zip_path)\n",
+    "def to_parsed_csv(src_path):\n",
+    "    print(src_path)\n",
     "    OBJ_COLS = ['device', 'geoNetwork', 'totals', 'trafficSource']\n",
-    "    \n",
+    "\n",
     "    params = {\n",
-    "    'filepath_or_buffer': zip_path,\n",
-    "    'dtype': {\n",
-    "        'fullVisitorId': 'str'\n",
-    "    },\n",
-    "    'converters': {c: json.loads\n",
-    "                   for c in OBJ_COLS},\n",
+    "        'filepath_or_buffer': src_path,\n",
+    "        'dtype': {\n",
+    "            'fullVisitorId': 'str'\n",
+    "        },\n",
+    "        'converters': {c: json.loads\n",
+    "                       for c in OBJ_COLS},\n",
     "    }\n",
     "    df = pd.read_csv(**params)\n",
-    "    \n",
+    "\n",
     "    for c in OBJ_COLS:\n",
     "        df_json = json_normalize(df[c])\n",
     "        df_json.columns = [f\"{c}_{sub_c}\" for sub_c in df_json.columns]\n",
     "\n",
     "        df = df.drop(c, axis=1).merge(df_json, right_index=True, left_index=True)\n",
-    "    \n",
+    "\n",
     "    print(df.columns)\n",
     "    print(df.head())\n",
-    "    \n",
+    "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-21T13:04:21.969690Z",
-     "start_time": "2018-09-21T12:59:33.184850Z"
+     "end_time": "2018-09-22T15:01:47.681619Z",
+     "start_time": "2018-09-22T14:57:05.050057Z"
     },
     "scrolled": true
    },
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input/train.csv.zip\n",
+      "input/train.csv\n",
       "Index(['channelGrouping', 'date', 'fullVisitorId', 'sessionId',\n",
       "       'socialEngagementType', 'visitId', 'visitNumber', 'visitStartTime',\n",
       "       'device_browser', 'device_browserSize', 'device_browserVersion',\n",
@@ -152,7 +152,7 @@
       "4                        NaN               google  \n",
       "\n",
       "[5 rows x 55 columns]\n",
-      "input/test.csv.zip\n",
+      "input/test.csv\n",
       "Index(['channelGrouping', 'date', 'fullVisitorId', 'sessionId',\n",
       "       'socialEngagementType', 'visitId', 'visitNumber', 'visitStartTime',\n",
       "       'device_browser', 'device_browserSize', 'device_browserVersion',\n",
@@ -239,13 +239,13 @@
     }
    ],
    "source": [
-    "df_train = to_parsed_csv(\"input/train.csv.zip\")\n",
-    "df_test = to_parsed_csv(\"input/test.csv.zip\")"
+    "df_train = to_parsed_csv(\"input/train.csv\")\n",
+    "df_test = to_parsed_csv(\"input/test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-21T13:05:18.165340Z",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-21T13:06:00.476022Z",
