--- a/simple_eda.ipynb
+++ b/simple_eda.ipynb
@@ -34,6 +34,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-09-26T15:52:22.647963Z",
+     "start_time": "2018-09-26T15:52:22.477535Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1493146175    8\n",
+       "1478345904    6\n",
+       "1484649802    6\n",
+       "1481369525    6\n",
+       "1494374199    5\n",
+       "1500856602    5\n",
+       "1495031359    5\n",
+       "1488190236    4\n",
+       "1477470782    4\n",
+       "1478942540    4\n",
+       "1490264767    4\n",
+       "1487580558    4\n",
+       "1473406997    4\n",
+       "1489390306    4\n",
+       "1481365730    4\n",
+       "1490255839    4\n",
+       "1490899032    4\n",
+       "1490384972    4\n",
+       "1475719086    4\n",
+       "1500856591    4\n",
+       "1481874207    4\n",
+       "1490264449    4\n",
+       "1500856605    4\n",
+       "1491913766    4\n",
+       "1494590623    4\n",
+       "1494958069    4\n",
+       "1478243627    4\n",
+       "1490384962    4\n",
+       "1500880897    4\n",
+       "1473406994    4\n",
+       "             ..\n",
+       "1477332834    1\n",
+       "1483716445    1\n",
+       "1475329884    1\n",
+       "1500100509    1\n",
+       "1485330337    1\n",
+       "1479672194    1\n",
+       "1485529024    1\n",
+       "1475080150    1\n",
+       "1479278548    1\n",
+       "1491849170    1\n",
+       "1481367504    1\n",
+       "1477126095    1\n",
+       "1489713101    1\n",
+       "1483411402    1\n",
+       "1479239623    1\n",
+       "1493923781    1\n",
+       "1493911491    1\n",
+       "1483255742    1\n",
+       "1493729188    1\n",
+       "1493745596    1\n",
+       "1479051195    1\n",
+       "1481009879    1\n",
+       "1489541049    1\n",
+       "1483833927    1\n",
+       "1481830448    1\n",
+       "1485371317    1\n",
+       "1476984756    1\n",
+       "1483222958    1\n",
+       "1485316008    1\n",
+       "1497372675    1\n",
+       "Name: visitStartTime, Length: 887159, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train['visitStartTime'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
